hash content pages

--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     ]
   },
   "devDependencies": {
-    "node-sass": "^8.0.0"
+    "@types/react-router-hash-link": "^2.4.5",
+    "node-sass": "^8.0.0",
+    "react-router-dom": "^6.6.2",
+    "react-router-hash-link": "^2.4.3"
   }
 }
