--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "swiper": "^8.4.6",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
@@ -46,6 +45,7 @@
     "@types/react-router-hash-link": "^2.4.5",
     "node-sass": "^8.0.0",
     "react-router-dom": "^6.6.2",
-    "react-router-hash-link": "^2.4.3"
+    "react-router-hash-link": "^2.4.3",
+    "swiper": "^8.4.6"
   }
 }
