--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "devDependencies": {
     "@types/react-router-hash-link": "^2.4.5",
     "node-sass": "^8.0.0",
+    "react-intersection-observer": "^9.4.1",
     "react-router-dom": "^6.6.2",
     "react-router-hash-link": "^2.4.3",
     "swiper": "^8.4.6"
