--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "foodbery",
 	"version": "0.1.0",
 	"private": true,
+	"homepage": "https://andrewchernigovsky.github.io/foodberry/",
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
@@ -18,10 +19,14 @@
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build",
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"eject": "react-scripts eject",
+		"react": "dotenv -e .env react-scripts start",
+		"reactb": "dotenv -e .env.${REACT_APP_ENVIRONMENT} react-scripts build"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -43,6 +48,7 @@
 	},
 	"devDependencies": {
 		"@types/react-router-hash-link": "^2.4.5",
+		"gh-pages": "^5.0.0",
 		"node-sass": "^8.0.0",
 		"react-intersection-observer": "^9.4.1",
 		"react-router-dom": "^6.6.2",
