--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject",
-		"react": "dotenv -e .env react-scripts start",
-		"reactb": "dotenv -e .env.${REACT_APP_ENVIRONMENT} react-scripts build"
+		"eject": "react-scripts eject"
 	},
 	"eslintConfig": {
 		"extends": [
