--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"node-sass": "^7.0.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-input-mask": "^2.0.4",
 		"react-scripts": "5.0.1",
 		"typescript": "^4.9.4",
 		"web-vitals": "^2.1.4"
@@ -45,6 +46,7 @@
 		]
 	},
 	"devDependencies": {
+		"@types/react-input-mask": "^3.0.2",
 		"@types/react-router-hash-link": "^2.4.5",
 		"gh-pages": "^5.0.0",
 		"node-sass": "^8.0.0",
