--- a/package.json
+++ b/package.json
@@ -3,29 +3,12 @@
 	"version": "0.1.0",
 	"private": true,
 	"homepage": "https://andrewchernigovsky.github.io/foodberry/",
-	"dependencies": {
-		"@testing-library/jest-dom": "^5.16.5",
-		"@testing-library/react": "^13.4.0",
-		"@testing-library/user-event": "^13.5.0",
-		"@types/jest": "^27.5.2",
-		"@types/node": "^16.18.11",
-		"@types/react": "^18.0.26",
-		"@types/react-dom": "^18.0.10",
-		"node-sass": "^7.0.3",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-input-mask": "^2.0.4",
-		"react-scripts": "5.0.1",
-		"typescript": "^4.9.4",
-		"web-vitals": "^2.1.4"
-	},
 	"scripts": {
 		"predeploy": "npm run build",
 		"deploy": "gh-pages -d build",
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"start": "vite",
+		"build": "tsc && vite build",
+		"preview": "vite preview"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -45,14 +28,28 @@
 			"last 1 safari version"
 		]
 	},
-	"devDependencies": {
-		"@types/react-input-mask": "^3.0.2",
-		"@types/react-router-hash-link": "^2.4.5",
-		"gh-pages": "^5.0.0",
-		"node-sass": "^8.0.0",
+	"dependencies": {
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-input-mask": "^2.0.4",
 		"react-intersection-observer": "^9.4.1",
 		"react-router-dom": "^6.6.2",
 		"react-router-hash-link": "^2.4.3",
-		"swiper": "^8.4.6"
+		"swiper": "^8.4.6",
+		"web-vitals": "^2.1.4"
+	},
+	"devDependencies": {
+		"@types/node": "^16.18.11",
+		"@types/react": "^18.0.26",
+		"@types/react-dom": "^18.0.10",
+		"@types/react-input-mask": "^3.0.2",
+		"@types/react-router-hash-link": "^2.4.5",
+		"@vitejs/plugin-react-swc": "^3.0.0",
+		"gh-pages": "^5.0.0",
+		"sass": "^1.58.1",
+		"typescript": "^4.9.4",
+		"vite": "^4.1.0",
+		"vite-tsconfig-paths": "^4.0.5"
 	}
 }
+
