--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"web-vitals": "^2.1.4"
 	},
 	"devDependencies": {
+		"@types/leaflet": "^1.9.1",
 		"@types/node": "^16.18.11",
 		"@types/react": "^18.0.26",
 		"@types/react-dom": "^18.0.10",
@@ -46,6 +47,9 @@
 		"@types/react-router-hash-link": "^2.4.5",
 		"@vitejs/plugin-react-swc": "^3.0.0",
 		"gh-pages": "^5.0.0",
+		"leaflet": "^1.9.3",
+		"leaflet-css": "^0.1.0",
+		"react-leaflet": "^4.2.1",
 		"sass": "^1.58.1",
 		"typescript": "^4.9.4",
 		"vite": "^4.1.0",
