--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"gh-pages": "^5.0.0",
 		"leaflet": "^1.9.3",
 		"leaflet-css": "^0.1.0",
+		"react-lazy-load-image-component": "^1.5.6",
 		"react-leaflet": "^4.2.1",
 		"sass": "^1.58.1",
 		"typescript": "^4.9.4",
