--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"@types/react": "^18.0.26",
 		"@types/react-dom": "^18.0.10",
 		"@types/react-input-mask": "^3.0.2",
+		"@types/react-lazy-load-image-component": "^1.5.2",
 		"@types/react-router-hash-link": "^2.4.5",
 		"@vitejs/plugin-react-swc": "^3.0.0",
 		"gh-pages": "^5.0.0",
