--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"gh-pages": "^5.0.0",
 		"leaflet": "^1.9.3",
 		"leaflet-css": "^0.1.0",
+		"prettier": "^2.8.8",
 		"react-lazy-load-image-component": "^1.5.6",
 		"react-leaflet": "^4.2.1",
 		"sass": "^1.58.1",
